--- a/board_site/board/templates/board/main.html
+++ b/board_site/board/templates/board/main.html
@@ -6,6 +6,12 @@
 </head>
 <body>
     <h1>Объявления</h1>
+    <div>
+        <a href="{% url 'main' %}">Главная</a>
+        {% for rubric in rubrics  %}
+        <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
+        {% endfor %}
+    </div>
     {% for bb in bbs %}
     <div>
         <h2>{{bb.title}}</h2>
