--- a/board_site/board/templates/board/main.html
+++ b/board_site/board/templates/board/main.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Главная :: Доска объявлений</title>
-</head>
-<body>
-    <h1>Объявления</h1>
-    <div>
-        <a href="{% url 'main' %}">Главная</a>
-        {% for rubric in rubrics  %}
-        <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
-        {% endfor %}
-    </div>
+{% extends 'layout/basic.html' %}
+{% block content %}
     {% for bb in bbs %}
     <div>
         <h2>{{bb.title}}</h2>
@@ -21,5 +9,4 @@
         <h6>{{bb.published}}</h6>
     </div>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
