--- a/board_site/board/templates/board/create.html
+++ b/board_site/board/templates/board/create.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Добовление объявления :: Доска объявлений</title>
-</head>
-<body>
+{% extends 'layout/basic.html' %}
+
+{% block title %}Создать объявдение{% endblock %}
+
+{% block content %}
     <h1>Добавление объявлений</h1>
-    <div>
-        <a href="{% url 'main' %}">Главная</a>
-        {% for rubric in rubrics %}
-        <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
-        {% endfor %}
-    </div>
 
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Добавить">
     </form>
-</body>
-</html>
+{% endblock %}
