--- a/board_site/board/static/board/css/style.css
+++ b/board_site/board/static/board/css/style.css
@@ -1,14 +1,43 @@
+body {
+    background: white;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 5px 0px 0px 0px;
+}
+
 header h1 {
+    font-family: 'Abril Fatface', cursive;
+    font-family: 'Josefin Sans', sans-serif;
+
     font-size: 40pt;
     text-transform: uppercase;
     text-align: center;
-    background: green;
+    background: #44648c;
 }
 
 nav {
     font-size: 16pt;
     width: 150px;
     float: left;
+}
+
+.detail-href a {
+    color: black;
+}
+
+.detail-href a:after {
+    color: black;
+}
+
+.nav_container {
+    background: white;
+    border-radius: 7px;
+
+}
+
+.nav-nav a:hover {
+    color: #44648c;
 }
 
 nav a {
@@ -20,8 +49,8 @@ nav a {
 }
 
 nav a:hover {
-    color: green;
-    cursor: pointer;
+    color: white;
+        cursor: pointer;
 }
 
 nav a:after{
@@ -29,20 +58,99 @@ nav a:after{
 }
 
 section {
-    margin-left: 170px;
+    margin-left: 180px;
+}
+
+
+.content-container {
+    border-radius: 7px;
+    background: white;
+    padding: 0px 12px 12px 12px;
+    margin: 12px;
+    width: 300px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.content-container:hover
+{
+  transform: translateY(5px);
+  box-shadow: inset 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+}
+
+
+
+
+@media(min-width: 747px){
+
+.detail-content img {
+    align: center;
+    width: 600px;
+}
+
+.detail-content {
+    border-radius: 7px;
+    background: white;
+    padding: 0px 12px 12px 12px;
+    margin: 12px;
+    width: content-max;
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.5);
+    flex-wrap: wrap;
+}
+.contentic {
+    overflow: scrolling;
+    max-width:600px;
+    display: block;
+}
+}
+
+.about h4 {
+    margin: 0px 0px 0px 0px;
+}
+
+.contentic p{
+    max-width: 600px;
+    margin: 0px 0px 0px 0px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.content img {
+    width: 300px;
+    height: 195px;
+    porder-radius: 8px;
 }
 
 .content-footer {
 
 }
 
-.content-container {
-    border-radius: 7px;
-    background: rgba(188, 255, 133, 0.733);
-    padding: 0px 12px 12px 12px;
-    margin: 12px;
+h4 {
+    margin: 20px 0px 0px 0px;
 }
 
-.photo {
-    width: 300px;
+.icon {
+   font-size: 70px;
+   padding: 0px 5px 0px 0px;
+   }
+
+@media (min-width:767px) {
+
+.some-content {
+    max-width: 100%;
+    margin: 0px auto;
+    float: none;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+}
+
+.category {
+    margin: 8px 0px 0px 0px;
+    border-radius: 8px;
+    background: #44648c;
+    text-align: center;
+    display: block;
+    flex-wrap: wrap;
+    overflow: hidden;
 }
