--- a/board_site/board/templates/board/by_rubric.html
+++ b/board_site/board/templates/board/by_rubric.html
@@ -1,19 +1,20 @@
 {% extends 'layout/basic.html' %}
-{% block title %}{{ current_rubric.name }}{% endblock %}
 
 {% block content %}
-<h2>{{ current_rubric.name }}</h2>
-{% for bb in bbs %}
+<div class="some-content">
+    {% for bb in bbs %}
     <div class="content-container">
         <div class="content-name">
             <h2>{{bb.title}}</h2>
         </div>
 
         <div class="content">
-            <p>{{bb.content}}</p>
-            <p>${{bb.price}}</p>
-            <br>
-            <h6>{{bb.published}}</h6>
+            <img src="{{ bb.photo.url }}" alt=" Sorry...Image cannot load..."><br>
+
+
+            <h1>${{ bb.price }}</h1><br>
+            <h4>{{ bb.content |linebreaks|truncatewords:10 }}</h4>
+            <h6>{{ bb.published }}</h6>
             <div class="content-footer">
                 <a href="{{ bb.get_absolute_url }}">
                      <input type="submit" value="Подробнее">
@@ -21,4 +22,6 @@
             </div>
         </div>
     </div>
+    {% endfor %}
 {% endblock %}
+</div>
