--- a/board_site/board/templates/board/main.html
+++ b/board_site/board/templates/board/main.html
@@ -1,6 +1,7 @@
 {% extends 'layout/basic.html' %}
-{% load static %}
+
 {% block content %}
+<div class="some-content">
     {% for bb in bbs %}
     <div class="content-container">
         <div class="content-name">
@@ -8,13 +9,11 @@
         </div>
 
         <div class="content">
-            <div class="photo">
-                <img src="{{bb.photo.url}}" alt=" Sorry...Image cannot load...">
-            </div>
+            <img src="{{ bb.photo.url }}" alt=" Sorry...Image cannot load..."><br>
 
-            <p>{{ bb.content }}</p>
-            <p>${{ bb.price }}</p>
-            <br>
+
+            <h1>${{ bb.price }}</h1><br>
+            <h4>{{ bb.content |truncatewords:10 }}</h4>
             <h6>{{ bb.published }}</h6>
             <div class="content-footer">
                 <a href="{{ bb.get_absolute_url }}">
@@ -25,3 +24,4 @@
     </div>
     {% endfor %}
 {% endblock %}
+</div>
