--- a/board_site/board/templates/layout/basic.html
+++ b/board_site/board/templates/layout/basic.html
@@ -3,23 +3,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Josefin+Sans&family=Sassy+Frass&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>{% block title %}Главная{% endblock %} :: Доска объявлений</title>
+    <title>{% block title %}Главная{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'board/css/style.css' %}">
 </head>
 <body>
-    <header> <h1>srufar Объявления</h1> </header>
+<!--    перевод - исследовать-->
+    <header>
+        <div>
+            <h1>
+                <span class="icon material-symbols-outlined">travel_explore</span>
+                explore
+            </h1>
+        </div>
+        <div class="account">
+            <h1>
+                {% if user %}
+                <a href="#">
+                    <span class="material-symbols-outlined">login</span>
+                </a>
+
+                {% else %}
+<!--                    for username-->
+                <a href="#">
+                    <span class="material-symbols-outlined">logout</span>
+                </a>
+                {% endif %}
+            </h1>
+        </div>
+
+    </header>
     <nav>
-        <a href="{% url 'main' %}">Главная</a>
-        <a href="{% url 'add'%}">Создать объявление</a>
-        <h4>Категории</h4>
-        {% for rubric in rubrics %}
-        <a href="{{ rubric.get_absolute_url }}">{{ rubric.name }}</a>
-        {% endfor %}
+        <div class="nav_container">
+            <div class="nav-nav">
+                <a href="{% url 'main' %}">Главная</a>
+                <a href="{% url 'add'%}">Создать объявление</a>
+            </div>
+
+            <h4>Категории</h4>
+            {% for rubric in rubrics %}
+            <div class="category">
+                <a href="{{ rubric.get_absolute_url }}">{{ rubric.name }}</a>
+            </div>
+            {% endfor %}
+        </div>
     </nav>
     <section>
         {% block content %}
         {% endblock %}
     </section>
+
 </body>
 </html>
