Добавил регистрация и авторизацию. Коммит перед созданием приложения User

--- a/board_site/board/templates/layout/basic.html
+++ b/board_site/board/templates/layout/basic.html
@@ -23,14 +23,18 @@
         </div>
         <div class="account">
             <h1>
-                {% if user %}
-                <a href="#">
+                {% if not request.user.is_authenticated %}
+                <a href="{% url 'login' %}">
                     <span class="material-symbols-outlined">login</span>
+                </a>
+                |
+                <a href="{% url 'register' %}">
+                    <span class="material-symbols-outlined">how_to_reg</span>
                 </a>
 
                 {% else %}
 <!--                    for username-->
-                <a href="#">
+                <a href="{% url 'logout' %}">
                     <span class="material-symbols-outlined">logout</span>
                 </a>
                 {% endif %}
