--- a/board_site/board/static/board/css/style.css
+++ b/board_site/board/static/board/css/style.css
@@ -71,13 +71,10 @@ section {
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
-.content-container:hover
-{
+.content-container: hover {
   transform: translateY(5px);
   box-shadow: inset 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
 }
-
-
 
 
 @media(min-width: 747px){
