--- a/board_site/board/templates/layout/basic.html
+++ b/board_site/board/templates/layout/basic.html
@@ -34,7 +34,7 @@
 
                 {% else %}
 <!--                    for username-->
-                <a href="{% url 'logout' %}">
+                <a href="{% url 'log_out' %}">
                     <span class="material-symbols-outlined">logout</span>
                 </a>
                 |
