--- a/board_site/users/templates/users/pas_ch.html
+++ b/board_site/users/templates/users/pas_ch.html
@@ -7,6 +7,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Изменить">
+        <input type="submit" value="Изменить">    <h4><a href="#">Я зaбыл пароль =(</a></h4>
     </form>
+
 {% endblock %}
