--- a/board_site/users/templates/users/profile.html
+++ b/board_site/users/templates/users/profile.html
@@ -26,7 +26,7 @@
         {% endfor %}
         <input type="submit" value="Редактировть">
         <br>
-        <h5><a href="{% url 'password_change'%}">Изменить пароль</a></h5>
+        <h5><a href="{% url 'change_password' %}">Изменить пароль</a></h5>
     </form>
 
 </div>
