--- a/board_site/board/templates/layout/basic.html
+++ b/board_site/board/templates/layout/basic.html
@@ -41,8 +41,15 @@
                 <a href="{% url 'profile' user.id %}">{{user.username}}</a>
                 {% endif %}
         </div>
-
     </header>
+    
+    <div>
+        <form action="{% url 'search' %}" method="get">
+            <input type="search" type="text" name="serching" placeholder="Поиск товаров">
+            <button>Найти</button>
+        </form>
+    </div>
+    
     <nav>
         <div class="nav_container">
             <div class="nav-nav">
