--- a/board_site/board/templates/layout/basic.html
+++ b/board_site/board/templates/layout/basic.html
@@ -45,7 +45,7 @@
     
     <div>
         <form action="{% url 'search' %}" method="get">
-            <input type="search" type="text" name="serching" placeholder="Поиск товаров">
+            <input type="search" name="serching" placeholder="Поиск товаров">
             <button>Найти</button>
         </form>
     </div>
